refactor: implement SQLite transactional persistence, JSON Lines log rotation, and thread-safety enhancements